--- a/template.html
+++ b/template.html
@@ -52,7 +52,11 @@
         <h1>??<i class="fa-solid fa-star" style="color: gold;"></i><i class="fa-solid fa-star" style="color: gold;"></i><i class="fa-solid fa-star" style="color: gold;"></i>???</h1>
       </div>
       <div class="n-content">
-        <p>?????</p>
+        <p>
+          <label>解答</label>
+          <input type="text">
+          <input type="submit">
+        </p>
       </div>
     </main>
 
