--- a/template.html
+++ b/template.html
@@ -45,19 +45,19 @@
     </nav>
 
     <main>
-      <div class="n-title imp">
+      <div class="m-title">
         <div>
           <h3><a href="https://tsukukomafes-762a.github.io/news.html">一覧に戻る</a></h3>
         </div>
         <h1>??<i class="fa-solid fa-star" style="color: gold;"></i><i class="fa-solid fa-star" style="color: gold;"></i><i class="fa-solid fa-star" style="color: gold;"></i>???</h1>
       </div>
-      <div class="n-content">
+      <div class="question">
         <label>解答</label>
         <input type="text">
         <input type="submit">
         <p></p>
-        
       </div>
+      <div class="answer"></div>
     </main>
 
     <footer id="footing">
