--- a/template.html
+++ b/template.html
@@ -62,7 +62,7 @@
         function onButtonClick() {
           var val = answer.value;
           if (val == "わらしべ") {
-              ox.innerHTML = "<i class="fa-regular fa-circle" style="color: red;"></i>正解です!";
+              ox.innerHTML = "正解です!";
           } else {
               ox.innerHTML = "残念、不正解です...";
           }
