--- a/template.html
+++ b/template.html
@@ -30,7 +30,7 @@
       <ul class="nav-links">
 
         <!-- USING CHECKBOX HACK -->
-        <input type="checkbox" id="checkbox_toggle" />
+        <input type="checkbox" id="checkbox_toggle" class="menucheck"/>
         <label for="checkbox_toggle" class="hamburger"><i class="fa-solid fa-bars"></i></label>
 
         <!-- NAVIGATION MENUS -->
@@ -68,7 +68,7 @@
           }
         }
       </script>
-
+      
       <div class="hintshow">
         <h3><i class="fa-solid fa-chevron-down"></i>ヒントを見る</h3>
       </div>
