--- a/template.html
+++ b/template.html
@@ -30,7 +30,7 @@
       <ul class="nav-links">
 
         <!-- USING CHECKBOX HACK -->
-        <input type="checkbox" id="checkbox_toggle" class="menucheck"/>
+        <input type="checkbox" id="checkbox_toggle"/>
         <label for="checkbox_toggle" class="hamburger"><i class="fa-solid fa-bars"></i></label>
 
         <!-- NAVIGATION MENUS -->
