--- a/template.html
+++ b/template.html
@@ -84,6 +84,21 @@
       <div class="answer">
         <p>ｆでぃおｈどぃうわああああああ</p>
       </div>
+
+      <script>
+        $(function() {
+          $(".hintshow").click(function() {
+            $(".hint").slideToggle("");
+          });
+        });
+
+        $(function() {
+          $(".answershow").click(function() {
+            $(".answer").slideToggle("");
+          });
+        });
+      </script>
+
     </main>
 
     <footer id="footing">
