--- a/template.html
+++ b/template.html
@@ -37,7 +37,7 @@
         <div class="menu">
           <li><a href="https://tsukukomafes-762a.github.io/info.html">公演のご案内</a></li>
           <li><a href="https://tsukukomafes-762a.github.io/news.html">お知らせ</a></li>
-          <li><a href="https://tsukukomafes-762a.github.io/under-construction.html">オンライン謎</a></li>
+          <li><a href="https://tsukukomafes-762a.github.io/mystery.html">オンライン謎</a></li>
           <li><a href="https://tsukukomafes-762a.github.io/access.html">アクセス</a></li>
           <li><a href="https://tsukukomafes-762a.github.io/links.html">リンク集</a></li> 
         </div>
@@ -47,7 +47,7 @@
     <main>
       <div class="m-title">
         <div>
-          <h3><a href="https://tsukukomafes-762a.github.io/news.html">一覧に戻る</a></h3>
+          <h3><a href="https://tsukukomafes-762a.github.io/mystery.html">一覧に戻る</a></h3>
         </div>
         <h1>??<i class="fa-solid fa-star" style="color: gold;"></i><i class="fa-solid fa-star" style="color: gold;"></i><i class="fa-solid fa-star" style="color: gold;"></i>???</h1>
       </div>
