--- a/1.html
+++ b/1.html
@@ -52,6 +52,7 @@
         <h1>01<i class="fa-solid fa-star" style="color: gold;"></i><i class="fa-solid fa-star" style="color: gray;"></i><i class="fa-solid fa-star" style="color: gray;"></i>矢印アナグラム</h1>
       </div>
       <div class="question">
+        <img src="images/m1.png" style="width:100%">
         <label>解答</label>
         <input id="nyuryoku" type="text">
         <input type="button" value="解答" onclick="onButtonClick();" />
