--- a/1.html
+++ b/1.html
@@ -53,6 +53,8 @@
       </div>
       <div class="question">
         <img src="images/m1.png" style="width:100%">
+      </div>
+      <div class="ansbox">
         <label>解答</label>
         <input id="nyuryoku" type="text">
         <input type="button" value="解答" onclick="onButtonClick();" />
