--- a/template.html
+++ b/template.html
@@ -49,9 +49,12 @@
         <div>
           <h3><a href="https://tsukukomafes-762a.github.io/mystery.html">一覧に戻る</a></h3>
         </div>
-        <h1>??<i class="fa-solid fa-star" style="color: gold;"></i><i class="fa-solid fa-star" style="color: gold;"></i><i class="fa-solid fa-star" style="color: gold;"></i>???</h1>
+        <h1>??<i class="fa-solid fa-star" style="color: gray;"></i><i class="fa-solid fa-star" style="color: gray;"></i><i class="fa-solid fa-star" style="color: gray;"></i>???</h1>
       </div>
       <div class="question">
+        
+      </div>
+      <div class="ansbox">
         <label>解答</label>
         <input id="nyuryoku" type="text">
         <input type="button" value="解答" onclick="onButtonClick();" />
@@ -61,7 +64,7 @@
       <script>
         function onButtonClick() {
           var val = nyuryoku.value;
-          if (val == "わらしべ") {
+          if (val == "???") {
               ox.innerHTML = "正解です!";
           } else {
               ox.innerHTML = "残念、不正解です...";
@@ -74,7 +77,7 @@
       </div>
 
       <div class="hint">
-        <p>あらららっら</p>
+        <p>???</p>
       </div>
       
       <div class="answershow">
@@ -82,7 +85,8 @@
       </div>
 
       <div class="answer">
-        <p>ｆでぃおｈどぃうわああああああ</p>
+        <h4>答え:???</h4>
+        <p>???</p>
       </div>
 
       <script>
@@ -99,6 +103,7 @@
         });
       </script>
 
+      <br>
     </main>
 
     <footer id="footing">
