--- a/2.html
+++ b/2.html
@@ -49,19 +49,18 @@
         <div>
           <h3><a href="https://tsukukomafes-762a.github.io/mystery.html">一覧に戻る</a></h3>
         </div>
-        <h1>??<i class="fa-solid fa-star" style="color: gray;"></i><i class="fa-solid fa-star" style="color: gray;"></i><i class="fa-solid fa-star" style="color: gray;"></i>???</h1>
+        <h1>??<i class="fa-solid fa-star" style="color: gray;"></i><i class="fa-solid fa-star" style="color: gray;"></i><i class="fa-solid fa-star" style="color: gray;"></i>スタンプラリー用謎</h1>
       </div>
       <div class="question">
-
+        <p>この問題は学年合同スタンプラリーのための問題です。答えがわかった方は2-AHRの受付までお越し頂くとスタンプを押すことができます。<br>スタンプラリーについて詳細は<a href=tsukukomafes-762a.github.io/news/5.html">こちら</a>をご覧ください。</p>
       </div>
-      /*
+      <!--
       <div class="ansbox">
         <label>解答</label>
         <input id="nyuryoku" type="text">
         <input type="button" value="解答" onclick="onButtonClick();" />
         <p id="ox"></p>
       </div>
-      */
 
       <script>
         function onButtonClick() {
@@ -81,14 +80,15 @@
       <div class="hint">
         <p>???</p>
       </div>
+      -->
       
       <div class="answershow">
         <h2><i class="fa-solid fa-chevron-down"></i>解答・解説を見る</h2>
       </div>
 
       <div class="answer">
-        <h4>答え:???</h4>
-        <p>???</p>
+        <!--<h4>答え:???</h4>-->
+        <p>答えは文化祭終了後に公開します。</p>
       </div>
 
       <script>
