--- a/2.html
+++ b/2.html
@@ -49,7 +49,7 @@
         <div>
           <h3><a href="https://tsukukomafes-762a.github.io/mystery.html">一覧に戻る</a></h3>
         </div>
-        <h1>02<i class="fa-solid fa-star" style="color: gray;"></i><i class="fa-solid fa-star" style="color: gray;"></i><i class="fa-solid fa-star" style="color: gray;"></i>スタンプラリー用謎</h1>
+        <h1>02<i class="fa-solid fa-star" style="color: gold;"></i><i class="fa-solid fa-star" style="color: gray;"></i><i class="fa-solid fa-star" style="color: gray;"></i>スタンプラリー用謎</h1>
       </div>
       <div class="question">
         <p>この問題は学年合同スタンプラリーのための問題です。答えがわかった方は2-AHRの受付までお越し頂くとスタンプを押すことができます。<br>スタンプラリーについて詳細は<a href="https://tsukukomafes-762a.github.io/news/5.html">こちら</a>をご覧ください。</p>
