--- a/2.html
+++ b/2.html
@@ -50,10 +50,10 @@
           <h3><a href="https://tsukukomafes-762a.github.io/mystery.html">一覧に戻る</a></h3>
         </div>
         <h1>02<i class="fa-solid fa-star" style="color: gold;"></i><i class="fa-solid fa-star" style="color: gray;"></i><i class="fa-solid fa-star" style="color: gray;"></i>スタンプラリー用謎</h1>
-      </div>
+      </div> 
       <div class="question">
         <p>この問題は学年合同スタンプラリーのための問題です。答えがわかった方は2-AHRの受付までお越し頂くとスタンプを押すことができます。<br>スタンプラリーについて詳細は<a href="https://tsukukomafes-762a.github.io/news/5.html">こちら</a>をご覧ください。</p>
-        <img src="/images/m2.png" style="width:100%;"></img>
+        <img src="/images/m2.png" style="width:100%"></img>
       </div>
       <!--
       <div class="ansbox">
