--- a/2.html
+++ b/2.html
@@ -53,7 +53,7 @@
       </div> 
       <div class="question">
         <p>この問題は学年合同スタンプラリーのための問題です。答えがわかった方は2-AHRの受付までお越し頂くとスタンプを押すことができます。<br>スタンプラリーについて詳細は<a href="https://tsukukomafes-762a.github.io/news/5.html">こちら</a>をご覧ください。</p>
-        <img src="/images/m2.png" style="width:100%"></img>
+        <img src="images/m2.png" style="width:100%"></img>
       </div>
       <!--
       <div class="ansbox">
