--- a/2.html
+++ b/2.html
@@ -52,7 +52,7 @@
         <h1>02<i class="fa-solid fa-star" style="color: gold;"></i><i class="fa-solid fa-star" style="color: gray;"></i><i class="fa-solid fa-star" style="color: gray;"></i>スタンプラリー用謎</h1>
       </div> 
       <div class="question">
-        <p>この問題は学年合同スタンプラリーのための問題です。答えがわかった方は2-AHRの受付までお越し頂くとスタンプを押すことができます。<br>スタンプラリーについて詳細は<a href="https://tsukukomafes-762a.github.io/news/5.html">こちら</a>をご覧ください。</p>
+        <p>この問題は学年合同スタンプラリーのための問題です。答えがわかった方は2-AHRの受付までお越し頂くとスタンプを押すことができます。その際、待ち列にお並びいただくのではなく直接中の受付までお申し付けください。<br>スタンプラリーについて詳細は<a href="https://tsukukomafes-762a.github.io/news/5.html">こちら</a>をご覧ください。</p>
         <img src="images/m2.png" style="width:100%"></img>
       </div>
       <!--
@@ -73,15 +73,15 @@
           }
         }
       </script>
+      -->
       
       <div class="hintshow">
         <h2><i class="fa-solid fa-chevron-down"></i>ヒントを見る</h2>
       </div>
 
       <div class="hint">
-        <p>???</p>
+        <p>2-AHRでは、校内の数ヶ所に2種類のポスターを掲示しています。ポスターを探して見てみれば謎への手掛かりになるかも?なお、ポスターは2-AHRでもご覧になれますのでお気軽に受付までお声掛けください。</p>
       </div>
-      -->
       
       <div class="answershow">
         <h2><i class="fa-solid fa-chevron-down"></i>解答・解説を見る</h2>
